# tensorrt-for-dummies

./: .gitignore  README.md  export2onnx.py  inference_pytorch.py  inference_tensorrt.cpp  inference_tensorrt.py  inference_tensorrt10.py  inference_tensorrt8.cpp  inference_torch2trt.py  inference_torchtensorrt.py  model.py  onnx2tensorrt.py  onnx2tensorrt10.py  requirements.txt  requirements_base.txt  requirements_tensorrt_native.txt  requirements_torch2trt.txt  requirements_torchtensorrt.txt
inference_tensorrt10_cpp/: CMakeLists.txt  logger.h  main.cpp  prepostprocessing.h  util.cpp  util.h
